14.09.2018 Version 0.1.90
browser lock fixed by using session_write_close in php pages.

14.09.2018 Version 0.1.89
Appearance of sign in button is fixed.
save nextflow log file to server and read from there to improve performance.

13.09.2018 Version 0.1.88
hide/show feature for system inputs is added.

13.09.2018 Version 0.1.87
terminate run feature for local runs added.

12.09.2018 Version 0.1.86
default ignite executor parameters are added in profile modal.

12.09.2018 Version 0.1.85
automatic s3 key selection is added based on run env. in running page
automatic click on "use default" button in run page openning.
cluster deamon for amazon worker nodes is executed while initiating nodes.
downloaded singularity path is changed as mount dir. for amazon instances.
amazon ignite executor parameters are added.

12.09.2018 Version 0.1.84
amazon_running status updates run env. dropdown in running page

11.09.2018 Version 0.1.83
Run attempt counter and renaming log file added for amazon environment.

10.09.2018 Version 0.1.82
amazon status check algorithm is updated.

10.09.2018 Version 0.1.81
amazon status check algorithm is updated.
Readme updated.

08.09.2018 Version 0.1.80
Database files cleaned from drop table commands.
Nested pipeline feature added to pipeline page.
Adjustment of width of d3 workspace according to page size is added.

25.08.2018 Version 0.1.79
Renamed log file of run is checked in case command not executed.
Fixed minor bugs of checking run status.

22.08.2018 Version 0.1.78
Quick start guide is added to documentation.

16.08.2018 Version 0.1.77
Cleaning Project_pipeline_inputs removed from pipelineD3.js and moved to runpipeline.js to improve performance.

13.08.2018 Version 0.1.76
Cleaning Project_pipeline_inputs improved.

12.08.2018 Version 0.1.75
Array forms cloned from original hidden form to keep default values
Array tooltip activated when created by add button.
Conditional form support for checkbox is added.