@@ -1,5 +1,6 @@
 14.09.2018 Version 0.1.90
 browser lock fixed by using session_write_close in php pages.
+while copying run, user allowed to use new pipeline revision 
 
 14.09.2018 Version 0.1.89
 Appearance of sign in button is fixed.
